use apache Base64 codec instead of the private java <8 one